frontend/src/app/modules/analytics/compare-policy/compare-policy.component.scss
/* ... */
// .content::ng-deep *[type="FULL"] {
//     // background: var(--guardian-success-background, #d0ffd6);
//     // background: linear-gradient(90deg, var(--guardian-background, #ffffff) 29px, var(--guardian-grid-color, #b5b5b5) 29px, var(--guardian-grid-color, #b5b5b5) 30px, var(--guardian-success-background, #d0ffd6) 30px);
//     background: linear-gradient(90deg, var(--guardian-background, #ffffff) 29px, var(--guardian-grid-color, #b5b5b5) 29px, var(--guardian-grid-color, #b5b5b5) 30px, transparent 30px);
// }

// .content::ng-deep *[type="FULL"]:not([rate="100%"]) {
//     // background: var(--guardian-warning-background, #fffada);
//     background: linear-gradient(90deg, var(--guardian-background, #ffffff) 29px, var(--guardian-grid-color, #b5b5b5) 29px, var(--guardian-grid-color, #b5b5b5) 30px, var(--guardian-warning-background, #fffada) 30px);
// }

// .content::ng-deep *[type="PARTLY"] {
//     // background: var(--guardian-warning-background, #fffada);
//     background: linear-gradient(90deg, var(--guardian-background, #ffffff) 29px, var(--guardian-grid-color, #b5b5b5) 29px, var(--guardian-grid-color, #b5b5b5) 30px, var(--guardian-warning-background, #fffada) 30px);
// }

// .content::ng-deep *[type="LEFT"],
// .content::ng-deep *[type="RIGHT"] {
//     // background: var(--guardian-failure-background, #ffc5c6);
//     background: linear-gradient(90deg, var(--guardian-background, #ffffff) 29px, var(--guardian-grid-color, #b5b5b5) 29px, var(--guardian-grid-color, #b5b5b5) 30px, var(--guardian-failure-background, #ffc5c6) 30px);
// }

// .content::ng-deep *[type="PARTLY"][rate="100%"] {
//     background:
//         linear-gradient(90deg, var(--guardian-background, #ffffff) 29px, var(--guardian-grid-color, #b5b5b5) 29px, var(--guardian-grid-color, #b5b5b5) 30px, transparent 30px),
//         linear-gradient(45deg, var(--guardian-success-background, #d0ffd6) 48%, var(--guardian-warning-background, #fffada) 52%);
// }

.content::ng-deep .report-item-number[type="FULL"] {
    background: linear-gradient(90deg, var(--guardian-background, #ffffff) 29px, var(--guardian-grid-color, #b5b5b5) 29px, var(--guardian-grid-color, #b5b5b5) 30px, transparent 30px);
}

.content::ng-deep .report-item-number[type="FULL"]:not([rate="100%"]) {
    background: linear-gradient(90deg, var(--guardian-background, #ffffff) 29px, var(--guardian-grid-color, #b5b5b5) 29px, var(--guardian-grid-color, #b5b5b5) 30px, var(--partly-color-bg) 30px);
}

.content::ng-deep .report-item-number[type="PARTLY"] {
    background: linear-gradient(90deg, var(--guardian-background, #ffffff) 29px, var(--guardian-grid-color, #b5b5b5) 29px, var(--guardian-grid-color, #b5b5b5) 30px, var(--partly-color-bg) 30px);
}

.content::ng-deep .report-item-number[type="LEFT"],
.content::ng-deep .report-item-number[type="RIGHT"] {
    background: linear-gradient(90deg, var(--guardian-background, #ffffff) 29px, var(--guardian-grid-color, #b5b5b5) 29px, var(--guardian-grid-color, #b5b5b5) 30px, var(--left-right-color-bg) 30px);
}

.content::ng-deep .report-item-number[type="PARTLY"][rate="100%"] {
    background:
        linear-gradient(90deg, var(--guardian-background, #ffffff) 29px, var(--guardian-grid-color, #b5b5b5) 29px, var(--guardian-grid-color, #b5b5b5) 30px, transparent 30px),
        linear-gradient(45deg, var(--full-color-bg) 48%, var(--partly-color-bg) 52%);
}

.report-item-number {
    padding-left: 30px;
    grid-template-columns: calc(50% - 33px) 35px calc(50% - 18px);
    background: linear-gradient(90deg, var(--guardian-background, #ffffff) 29px, var(--guardian-grid-color, #b5b5b5) 29px, var(--guardian-grid-color, #b5b5b5) 30px, transparent 30px);
}

.report-item-number:hover {
    background: linear-gradient(90deg, var(--guardian-background, #ffffff) 29px, var(--guardian-grid-color, #b5b5b5) 29px, var(--guardian-grid-color, #b5b5b5) 30px, var(--hover-color, var(--guardian-grey-background, rgb(229 229 229 / 50%))) 30px) !important;
    box-shadow: 0px 11px 0px 0px var(--hover-color, var(--guardian-grey-background, rgb(229 229 229 / 50%))) !important;
}

.prop-table-row {
    display: table-row;
}

.prop-table-name {
    display: table-cell;
    font-weight: bold;
    color: var(--guardian-grid-color, #686868);
    border-top: 2px solid var(--guardian-background, #fff);
    padding-top: 2px;
    padding-bottom: 2px;
    box-sizing: border-box;
    min-width: 175px;
    height: 30px;
}

.prop-table-value {
    display: table-cell;
    border-top: 2px solid var(--guardian-background, #fff);
    padding-top: 4px;
    padding-bottom: 4px;
    padding-right: 36px;
    padding-left: 8px;
    min-width: 240px;
    position: relative;
    vertical-align: middle;
}

.prop-table-value .compare-btn {
    display: none;
    position: absolute;
    top: 0px;
    right: 1px;
    left: inherit;
    bottom: inherit;
    box-shadow: 0px 0px 0px 2px var(--guardian-background, #fff);
}

.prop-table-value[prop-type="schema"] .compare-btn {
    display: block;
}

.prop-table-value span {
    display: inline-block;
    width: min(max-content, 100%);
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    vertical-align: middle;
}

.prop-table-body {
    display: block;
    width: 100%;
    max-width: 100%;
}

.prop-table-header {
    font-weight: bold;
    color: var(--guardian-grid-color, #686868);
}

.prop-table-row[type="LEFT"],
.prop-table-row[type="RIGHT"] {
    background: var(--left-right-color);
}

.prop-table-row[type="FULL"] {
    background: var(--full-color);
}

.prop-table-row[type="PARTLY"] {
    background: var(--partly-color);
}

.prop-table-row[type="NONE"] {
    background: var(--guardian-grey-background, #f3f3f3);
}

.prop-table-value [prop-type="array"],
.prop-table-value [prop-type="object"] {
    display: none;
}

.prop-table-row[type="LEFT"][index="1"] {
    opacity: 0.2;
}

.prop-table-row[type="RIGHT"][index="0"] {
    opacity: 0.2;
}
/* ... */

